# AIPrince

./: .editorconfig  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  routes.tsx
src-tauri/: .env.default  .gitignore  1.json  Cargo.toml  README.md  image_z_image_turbo.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/2026-03-15-161455_create_ai_scripts/: down.sql  up.sql
src-tauri/migrations/2026-03-23-030203_create_comfyui_apis/: down.sql  up.sql
src-tauri/migrations/2026-03-31-175856_add_field_for_comfyui_apis/: down.sql  up.sql
src-tauri/src/: lib.rs  main.rs  schema.rs
src-tauri/src/ai_scripts/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/comfyui/: commands.rs  mod.rs  models.rs  service.rs
src/common/: ai_scripts.ts  index.ts
src/components/: buttons.tsx  icons.tsx  images.tsx  inputs.tsx  modal.tsx  notification.tsx  sidebar.tsx
src/components/ai_scripts/: analysis.tsx  index.tsx
src/components/comfyui/: CallApi.tsx  Parameters.tsx
src/components/editor/: base_elements.tsx  helper.tsx  index.tsx  shot_elements.tsx  toolbar.tsx  types.tsx
src/pages/: Index.tsx  UI.tsx
src/pages/ai_scripts/: NewAiScript.tsx
src/pages/comfyui/: ApiListPage.tsx  ApiPage.tsx  NewComfyUiApiPage.tsx  index.tsx
src/services/: ai_scripts.ts  analysis.ts  comfyui.ts
src/states/: ai_scripts.ts  comfyui.ts
