[package]
name = "ai-prince"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_prince_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.3.7", features = ["sqlite", "chrono"] }
dotenvy = "0.15"
chrono = { version = "0.4.44", features = ["serde"] }
tauri-plugin-log = "2"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
uuid = { version = "1.23.0", features = ["v4", "serde"] }
tauri-plugin-fs = "2"

